--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 		<!-- https://github.com/coobird/thumbnailator -->
 		<thumbnailator.version>0.4.8</thumbnailator.version>
 
+		<!-- org.apache.httpcomponents -->
+		<httpcomponents.version>4.5.2</httpcomponents.version>
+
+		<!-- Thymeleaf extras data attribute -->
+		<thymeleaf-extras-data-attribute.version>2.0.1</thymeleaf-extras-data-attribute.version>
+
 	</properties>
 
 	<build>
@@ -209,5 +215,20 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<!-- Http Component Apache -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpcomponents.version}</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Thymeleaf extras data attribute -->
+		<dependency>
+			<groupId>com.github.mxab.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-data-attribute</artifactId>
+			<version>${thymeleaf-extras-data-attribute.version}</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
