--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 
 		<!-- Apache Bean Utils -->
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
+		
+        <!-- Spring Security -->
+        <spring-security.version>4.1.1.RELEASE</spring-security.version>	
+        
+        <!-- Thymeleaf - Extras Spring Security -->
+        <thymeleaf-extras-springsecurity.version>3.0.0.RELEASE</thymeleaf-extras-springsecurity.version>        	
 
 	</properties>
 
@@ -241,6 +247,29 @@
 			<version>${commons-beanutils.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+            <scope>compile</scope>
+        </dependency>		
+        
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+            <scope>compile</scope>
+        </dependency>  
+        
+        <!-- Thymeleaf - Extras Spring Security -->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <version>${thymeleaf-extras-springsecurity.version}</version>
+            <scope>compile</scope>
+        </dependency>              
 
 	</dependencies>
 </project>
